# api-spec/openapi/swagger/fulmine/v1/service.swagger.json
@@ -754,15 +754,15 @@
         ]
       }
     },
-    "/v1/vhtlc/tx/{vhtlcId}": {
+    "/v1/vhtlc/spendTx/{vhtlcId}": {
       "get": {
-        "summary": "GetVHTLCTransaction returns the fully signed ark transaction for a VHTLC,\nwhether the VHTLC is spent by a finalized or pending tx.",
-        "operationId": "Service_GetVHTLCTransaction",
+        "summary": "GetVHTLCSpendingTx returns the fully signed ark transaction for a spent VHTLC,\nwhether the VHTLC is spent by a finalized or pending tx.",
+        "operationId": "Service_GetVHTLCSpendingTx",
         "responses": {
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/v1GetVHTLCTransactionResponse"
+              "$ref": "#/definitions/v1GetVHTLCSpendingTxResponse"
             }
           },
           "default": {
@@ -778,19 +778,6 @@
             "in": "path",
             "required": true,
             "type": "string"
-          },
-          {
-            "name": "outpoint.txid",
-            "in": "query",
-            "required": false,
-            "type": "string"
-          },
-          {
-            "name": "outpoint.vout",
-            "in": "query",
-            "required": false,
-            "type": "integer",
-            "format": "int64"
           }
         ],
         "tags": [
@@ -1354,16 +1341,12 @@
         }
       }
     },
-    "v1GetVHTLCTransactionResponse": {
+    "v1GetVHTLCSpendingTxResponse": {
       "type": "object",
       "properties": {
         "tx": {
           "type": "string",
           "description": "The fully signed ark transaction in hex format."
-        },
-        "pending": {
-          "type": "boolean",
-          "description": "Whether the transaction is from a pending intent (true) or a finalized round (false)."
         }
       }
     },
